<resources>
	<string name="app_name" translatable="false">Support Library Demos</string>
	<string name="my_name">Sunchul Baek</string>

	<!-- Revision 23 -->
	<string name="revision_23" translatable="false">Revision 23</string>
	<string name="custom_tabs" translatable="false">Custom Tabs (/w Chrome 45)</string>
	<string name="percent" translatable="false">Percent</string>
	<string name="v7_preference" translatable="false">v7 Preference (Not Yet)</string>
	<string name="v14_preference" translatable="false">v14 Preference (Not Yet)</string>

	<!-- Revision 22.2.0 -->
	<string name="revision_22_2_0" translatable="false">Revision 22.2.0</string>
	<string name="action_design_appbar_layout" translatable="false">AppBarLayout</string>
	<string name="action_design_tab_layout" translatable="false">TabLayout</string>
	<string name="action_design_navigation_view" translatable="false">NavigationView</string>
	<string name="action_design_floating_action_button" translatable="false">Floating Action Button</string>
	<string name="action_design_swipe_dismiss_behavior" translatable="false">SwipeDismissBehavior</string>
	<string name="action_design_text_input_layout" translatable="false">TextInputLayout</string>
	<string name="action_design_collapsing_toolbar_layout" translatable="false">CollapsingToolbarLayout</string>

	<!-- Revision 22.1.0 -->
	<string name="revision_22_1_0" translatable="false">Revision 22.1.0</string>
	<string name="action_support_drawable_compat" translatable="false">DrawableCompat</string>
	<string name="action_support_prebuilt_interpolators" translatable="false">Prebuilt Interpolators</string>
	<string name="action_support_path_interpolator_compat" translatable="false">PathInterpolatorCompat</string>
	<string name="action_support_space" translatable="false">Space</string>
	<string name="action_support_nested_scroll_view" translatable="false">NestedScrollView</string>
	<string name="action_app_compat_delegate" translatable="false">AppCompatDelegate</string>
	<string name="action_app_compat_dialog" translatable="false">AppCompatDialog</string>
	<string name="action_app_compat_widget" translatable="false">AppCompat Widgets</string>
	<string name="action_app_compat_palette_builder" translatable="false">Palette.Builder</string>
	<string name="action_recycler_view_sorted_list" translatable="false">SortedList</string>

	<!-- Revision 22 -->
	<string name="revision_22" translatable="false">Revision 22</string>
	<string name="action_support_resource_compat" translatable="false">ResourceCompat</string>
	<string name="action_recycler_view_position" translatable="false">getLayoutPosition, getAdapterPosition</string>

	<!-- Revision 21.0.3 -->

	<!-- Revision 21.0.2 -->
	<string name="action_card_view_background" translatable="false">CardView.setCardBackgroundColor</string>

	<!-- Revision 21.0.1 -->

	<!-- Revision 21 -->
	<string name="action_support_fragment_transition" translatable="false">Fragment Transition</string>
	<string name="action_app_compat_toolbar" translatable="false">Toolbar</string>
	<string name="action_app_compat_actionbar_drawer_toggle" translatable="false">ActionBarDrawerToggle</string>
	<string name="action_app_compat_switch_compat" translatable="false">SwitchCompat</string>
	<string name="action_card_view" translatable="false">CardView</string>
	<string name="action_recycler_view" translatable="false">RecyclerView</string>
	<string name="action_palette_palette" translatable="false">Palette</string>

	<!-- Revision 13 -->
	<string name="action_support_drawer_layout" translatable="false">DrawerLayout</string>
	<string name="action_support_sliding_pane_layout" translatable="false">SlidingPaneLayout</string>

	<!-- Revision 9 -->
	<string name="action_support_pager_tab_strip" translatable="false">PagerTabStrip</string>

	<!-- Revision 6 -->
	<string name="action_support_pager_title_strip" translatable="false">PagerTitleStrip</string>

	<!-- custom tabs -->
	<string name="url_hint">Please type the url here.</string>
	<string name="warmup_button_text">Warmup Chrome</string>
	<string name="may_launch_button_text">May Launch URL</string>
	<string name="launch_button_text">Launch URL in a Chrome Custom Tab</string>
	<string name="connect_button_text">Connect to the service</string>
</resources>
