<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:app="http://schemas.android.com/apk/res-auto"
	  xmlns:tools="http://schemas.android.com/tools">

	<!-- Revision 22.2.0-->
	<group
		android:id="@+id/revision_22_2_0">
		<item
			android:id="@+id/design_appbar_layout"
			android:checkable="true"
			android:icon="@drawable/ic_action_22_2_0"
			android:title="@string/action_design_appbar_layout"
			app:showAsAction="never"/>
		<item
			android:id="@+id/design_navigation_view"
			android:checkable="true"
			android:title="@string/action_design_navigation_view"
			app:showAsAction="never"/>
		<item
			android:id="@+id/design_floating_action_button"
			android:checkable="true"
			android:title="@string/action_design_floating_action_button"
			app:showAsAction="never"/>
		<item
			android:id="@+id/design_swipe_dismiss_behavior"
			android:checkable="true"
			android:title="@string/action_design_swipe_dismiss_behavior"
			app:showAsAction="never"/>
		<item
			android:id="@+id/design_text_input_layout"
			android:checkable="true"
			android:title="@string/action_design_text_input_layout"
			app:showAsAction="never"/>
	</group>

	<!-- Revision 22.1.0-->
	<group
		android:id="@+id/revision_22_1_0">
		<item
			android:id="@+id/support_drawable_compat"
			android:checkable="true"
			android:icon="@drawable/ic_action_22_1_0"
			android:title="@string/action_support_drawable_compat"
			app:showAsAction="never"/>
		<item
			android:id="@+id/support_prebuilt_interpolators"
			android:checkable="true"
			android:title="@string/action_support_prebuilt_interpolators"
			app:showAsAction="never"/>
		<item
			android:id="@+id/support_path_interpolator_compat"
			android:checkable="true"
			android:title="@string/action_support_path_interpolator_compat"
			app:showAsAction="never"/>
		<item
			android:id="@+id/support_space"
			android:checkable="true"
			android:title="@string/action_support_space"
			app:showAsAction="never"/>
		<item
			android:id="@+id/support_nested_scroll_view"
			android:checkable="true"
			android:title="@string/action_support_nested_scroll_view"
			app:showAsAction="never"/>
		<item
			android:id="@+id/app_compat_delegate"
			android:checkable="true"
			android:title="@string/action_app_compat_delegate"
			app:showAsAction="never"/>
		<item
			android:id="@+id/app_compat_dialog"
			android:checkable="true"
			android:title="@string/action_app_compat_dialog"
			app:showAsAction="never"/>
		<item
			android:id="@+id/app_compat_widget"
			android:checkable="true"
			android:title="@string/action_app_compat_widget"
			app:showAsAction="never"/>
		<item
			android:id="@+id/app_compat_palette"
			android:checkable="true"
			android:title="@string/action_app_compat_palette"
			app:showAsAction="never"/>
		<item
			android:id="@+id/recycler_view_sorted_list"
			android:checkable="true"
			android:title="@string/action_recycler_view_sorted_list"
			app:showAsAction="never"/>
	</group>

	<!-- Revision 22-->
	<group
		android:id="@+id/revision_22">
		<item
			android:id="@+id/support_resource_compat"
			android:checkable="true"
			android:icon="@drawable/ic_action_22"
			android:title="@string/action_support_resource_compat"
			app:showAsAction="never"/>
		<item
			android:id="@+id/recycler_view_position"
			android:checkable="true"
			android:title="@string/action_recycler_view_position"
			app:showAsAction="never"/>
	</group>
</menu>
